  
  * debian/libboost-doc.doc-base: Change Section from obsolete
    Apps/Programming to Programming/C++.  Replace leading spaces of
    Abstract continuation lines by a single space.  The latter means
    "display verbatim", which is not desired.
  
  * debian/control: Remove package bcp1.35.
  * debian/rules: Package /usr/bin/bcp and its manpage in libboost1.35-dev.
  
 -- Steve M. Robbins <smr@debian.org>  Sun, 04 May 2008 11:06:39 -0500

boost (1.34.1-11) unstable; urgency=low

  * debian/control: Add python-dev to libboost-python-dev depends.
    Closes: #473973.

 -- Steve M. Robbins <smr@debian.org>  Fri, 04 Apr 2008 11:01:05 -0500

boost (1.34.1-10) unstable; urgency=low

  * debian/libboost-python-dev.postinst:
  * debian/libboost-python-dbg.postinst: Change from "which pyversions &&
    ..." (which fails if pyversions not available) to "if which pyversions
    ...".  Closes: #473607.
  
  * debian/patches/date_time_date_formatting_hpp: Update patch to also
    format fractional seconds with classic locale (thanks, Jean Pierre
    LeJacq).  Also reported upstream as ticket/1726.  Closes: #473177.

 -- Steve M. Robbins <smr@debian.org>  Mon, 31 Mar 2008 18:44:59 -0500

boost (1.34.1-9) unstable; urgency=low

  * debian/control:
  * debian/rules: Set up to use Quilt for maintaining patches.

  * boost/numeric/ublas/matrix.hpp:
  * boost/numeric/ublas/matrix_sparse.hpp: Revert.  These originated in
    the merge of 1.33.1 (change 13900) and appear to be erroneous.
  
  * Reverted all other diffs outside of debian/ and created the following
    set of quilt patches:
    - debian/patches/regex-vulnerability.patch
    - debian/patches/suppress-compiler-warnings.patch
    - debian/patches/function-template-thread-safety.patch
    - debian/patches/bjam-no-strict-aliasing.patch
    - debian/patches/gcc-4.3.patch
  
  * Remove obsolete patch files:
    - debian/patches/03-st_mt.patch
    - debian/patches/02-is_incrementable1331.patch