@@ -1,1 +1,0 @@
-libboost-dev: description-synopsis-starts-with-a-capital-letter
