@@ -37,7 +37,16 @@ boost1.35 (1.35.0-1) UNRELEASED; urgency=low
   * debian/control: Remove package bcp1.35.
   * debian/rules: Package /usr/bin/bcp and its manpage in libboost1.35-dev.
   
- -- Steve M. Robbins <smr@debian.org>  Sun, 04 May 2008 11:06:39 -0500
+  * debian/control: Build-depend on debhelper (>= 6.0.7) to ensure
+    dh_lintian available.
+  * debian/rules: Use dh_lintian to install lintian-overrides.  Create all
+    lintian-overrides files in debian/rules.
+  * debian/libboost-dev.lintian-overrides:
+  * debian/libboost-dbg.lintian-overrides:
+  * debian/libboost-python-dev.lintian-overrides:
+  * debian/libboost-doc.lintian-overrides: Delete.
+  
+ -- Steve M. Robbins <smr@debian.org>  Sun, 04 May 2008 22:47:54 -0500
 
 boost (1.34.1-11) unstable; urgency=low
 
